fix: add short intro gap

--- a/src/assets/sass/layout/_section.scss
+++ b/src/assets/sass/layout/_section.scss
@@ -16,7 +16,7 @@
     .wrapper {
       align-items: center;
       padding: 20vh 0;
-      min-height: 100vh;
+      min-height: 90vh;
     }
   }
 
@@ -25,7 +25,7 @@
     box-shadow: 0 -20px 50px 0 rgba(0,0,0,.15);
 
     @include breakpoint-laptop {
-      margin-top: 100vh;
+      margin-top: 90vh;
     }
 
     .wrapper {
